--- a/src/template.html
+++ b/src/template.html
@@ -8,4 +8,11 @@
   <body>
     <div id="root"></div>
   </body>
+  <style>
+    html,body,#root{
+      height:100%;
+      margin:0;
+      padding:0;
+    }
+  </style>
 </html>
